...
                    }
                }
            }
        },
        confirmButton = {
            onAppearanceClick?.let { onClick ->
                TextButton(onClick = onClick) { Text("Personalizar aparência") }
            }
        }
    )
}

@Composable
...
